Fix link to my CV

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   
   <!--<div><br>With <a href="https://www.wjtoth.com/">Justin Toth</a> I organized the <a href="https://www.wjtoth.com/comboptreading/">Combinatorial Optimization Reading Group</a> at the University of Waterloo from Fall 2018 to Spring 2020.</div>-->
 
-  <div><br>A recent version of my <a href="https://github.com/i-sharat/i-sharat.github.io/CV.pdf">CV</a> is here. My publications can also be found on <a href="https://orcid.org/0000-0002-1575-9648">ORCiD</a>, <a href="https://dblp.org/pid/200/9443.html">DBLP</a> and <a href="https://scholar.google.com/citations?hl=en&user=AEdLDw8AAAAJ">Google Scholar</a>.</div>
+  <div><br>A recent version of my <a href="https://i-sharat.github.io/CV.pdf">CV</a> is here. My publications can also be found on <a href="https://orcid.org/0000-0002-1575-9648">ORCiD</a>, <a href="https://dblp.org/pid/200/9443.html">DBLP</a> and <a href="https://scholar.google.com/citations?hl=en&user=AEdLDw8AAAAJ">Google Scholar</a>.</div>
 
 <td width="10%"> </td>
 </tr>
