Remove Dr prefix

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <td width="10%"> </td>
 <td width="40%">
 <div>
-<strong><h1>Dr Sharat Ibrahimpur</h1></strong>
+<strong><h1>Sharat Ibrahimpur</h1></strong>
 </div>
 <div>
 <a><strong>Postdoctoral Researcher</strong></a><br>
