--- a/index.html
+++ b/index.html
@@ -61,12 +61,16 @@
 <table style="width:100%"><tbody><tr>
   <td width="12%"> </td>
   <td width="78%">
+    <div><b>Algorithms for 2-connected network design and flexible Steiner trees with a constant number of terminals</b> [APPROX 2023, <a href="https://arxiv.org/abs/2206.11807">arXiv</a>]
+    <br>(with <a href="https://www.orie.cornell.edu/research/grad-students/ishan-bansal">Ishan Bansal</a>, <a href="https://www.math.uwaterloo.ca/~jcheriya/">Joseph Cheriyan</a>, and Logan Grout)</div>
+    <br>
+    
     <div><b>Efficient Caching with Reserves via Marking</b> [<a href="https://doi.org/10.4230/LIPIcs.ICALP.2023.80">ICALP 2023</a>, <a href="https://arxiv.org/abs/2305.02508">arXiv</a>]
     <br>(with <a href="https://sites.google.com/view/manishpurohit">Manish Purohit</a>, Zoya Svitkina, Erik Vee, and <a href="https://sites.google.com/site/joshw0/">Joshua R. Wang</a>)</div>
     <br>
 
    <div><b>Improved Approximation Algorithms by Generalizing the Primal-Dual Method Beyond Uncrossable Functions</b> [<a href="https://doi.org/10.4230/LIPIcs.ICALP.2023.15">ICALP 2023</a>, <a href="https://arxiv.org/abs/2209.11209">arXiv</a>]
-    <br>(with <a href="https://www.orie.cornell.edu/research/grad-students/ishan-bansal">Ishan Bansal</a>, <a href="https://www.math.uwaterloo.ca/~jcheriya/">Joseph Cheriyan</a>, and Logan Grout)</div>
+    <br>(with Ishan Bansal, Joseph Cheriyan, and Logan Grout)</div>
     <br>
  
 
