--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 </div>
 <div>
 <a><strong>Postdoctoral Researcher</strong></a><br>
-<a>Department of Mathematics</a><br>
-<a>London School of Economics and Political Science, London, UK</a><br>
-<a><b>Office:</b> COL 5.06</a><br>
+<a>Research Institute for Discrete Mathematics</a><br>
+<a>University of Bonn, Germany</a><br>
+<a><b>Office:</b> Arithmeum, Room 310</a><br>
 <a><b>email:</b> &ltfirstname&gt&ltdot&gt&ltlastname&gt@uwaterloo.ca</a><br>
+<a><b>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</b> &ltlastname&gt@dm.uni-bonn.de</a><br>
 <a><b>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</b> &ltfirstinitial&gt&ltdot&gt&ltlastname&gt@lse.ac.uk</a><br>
 </div>
 </td>
@@ -36,11 +37,11 @@
 <td width="10%"> </td>
 <td width="80%">
   
-  <div>I am currently a Research Officer in Algorithms and Optimisation at the London School of Economics, hosted by <a href="https://personal.lse.ac.uk/veghl/">László Végh</a> and <a href="https://nolver.net/home/">Neil Olver</a>. I received my M.Math and PhD degrees in Combinatorics and Optimization from the University of Waterloo where I was advised by <a href="http://www.math.uwaterloo.ca/~cswamy/">Chaitanya Swamy</a>. My undergraduate degree was in Applied Mathematics at the Indian Institute of Technology Roorkee.</div>
+  <div>I am currently a postdoc at the Research Institute for Discrete Mathematics in Bonn, and I am hosted by <a href="https://www.or.uni-bonn.de/~traub/Vera_Traub.html">Vera Traub</a>. Before this, I was a postdoc in the Mathematics Department at the London School of Economics, hosted by <a href="https://personal.lse.ac.uk/veghl/">László Végh</a> and <a href="https://nolver.net/home/">Neil Olver</a>. I received my M.Math and PhD degrees in Combinatorics and Optimization from the University of Waterloo, where I was advised by <a href="http://www.math.uwaterloo.ca/~cswamy/">Chaitanya Swamy</a>. My undergraduate degree was in Applied Mathematics at the Indian Institute of Technology Roorkee.</div>
 
   <div><br>I am mainly interested in designing approximation algorithms for combinatorial optimization problems, with a recent focus on stochastic optimization. I have broadly worked on problems arising in Network Design, Scheduling / Load Balancing, and Caching.</div>
 
-  <div><br>Between May and October 2021, I was a part-time research intern at Google Research, hosted by <a href="https://sites.google.com/view/manishpurohit/home">Manish Purohit</a>. </div>
+  <div><br>Between May and October 2021, I was a part-time research intern at Google Research, hosted by <a href="https://sites.google.com/view/manishpurohit/home">Manish Purohit</a> in the Discrete Algorithms Group. </div>
   
   <!--<div><br>With <a href="https://www.wjtoth.com/">Justin Toth</a> I organized the <a href="https://www.wjtoth.com/comboptreading/">Combinatorial Optimization Reading Group</a> at the University of Waterloo from Fall 2018 to Spring 2020.</div>-->
 
