Remove LSE email
LSE email account got deactivated as of September 30th, 2024.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 <a><b>Office:</b> Arithmeum, Room 310</a><br>
 <a><b>email:</b> &ltfirstname&gt&ltdot&gt&ltlastname&gt@uwaterloo.ca</a><br>
 <a><b>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</b> &ltlastname&gt@dm.uni-bonn.de</a><br>
-<a><b>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</b> &ltfirstinitial&gt&ltdot&gt&ltlastname&gt@lse.ac.uk</a><br>
 </div>
 </td>
 <td width="10%"> </td>
@@ -37,7 +36,7 @@
 <td width="10%"> </td>
 <td width="80%">
   
-  <div>I am currently a postdoc at the Research Institute for Discrete Mathematics in Bonn, and I am hosted by <a href="https://www.or.uni-bonn.de/~traub/Vera_Traub.html">Vera Traub</a>. Before this, I was a postdoc in the Mathematics Department at the London School of Economics, hosted by <a href="https://personal.lse.ac.uk/veghl/">László Végh</a> and <a href="https://nolver.net/home/">Neil Olver</a>. I received my M.Math and PhD degrees in Combinatorics and Optimization from the University of Waterloo, where I was advised by <a href="http://www.math.uwaterloo.ca/~cswamy/">Chaitanya Swamy</a>. My undergraduate degree was in Applied Mathematics at the Indian Institute of Technology Roorkee.</div>
+  <div>I am currently a postdoc at the Research Institute for Discrete Mathematics in Bonn, hosted by <a href="https://www.or.uni-bonn.de/~traub/Vera_Traub.html">Vera Traub</a>. Before this, I was a postdoc in the <a href="https://www.lse.ac.uk/Mathematics/Research/Operations-Research">Mathematics Department</a> at the London School of Economics, hosted by <a href="https://personal.lse.ac.uk/veghl/">László Végh</a> and <a href="https://nolver.net/home/">Neil Olver</a>. I received my M.Math and PhD degrees in Combinatorics and Optimization from the University of Waterloo, where I was advised by <a href="http://www.math.uwaterloo.ca/~cswamy/">Chaitanya Swamy</a>. My undergraduate degree was in Applied Mathematics at the Indian Institute of Technology Roorkee.</div>
 
   <div><br>I am mainly interested in designing approximation algorithms for combinatorial optimization problems, with a recent focus on stochastic optimization. I have broadly worked on problems arising in Network Design, Scheduling / Load Balancing, and Caching.</div>
 
