--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 <table style="width:100%"><tbody><tr>
   <td width="12%"> </td>
   <td width="78%">
+    <div><b>An O(log n)-Approximation Algorithm for (p,q)-Flexible Graph Connectivity via Independent Rounding</b> [IPCO 2025, <a href="https://arxiv.org/abs/2501.12549">arXiv</a>]
+    <br>(with <a href="https://www.laszlovegh.eu/">László Végh</a>)</div>
+    <br>
+    
     <div><b>Algorithms for 2-Connected Network Design and Flexible Steiner Trees with a Constant Number of Terminals</b> [<a href="https://drops.dagstuhl.de/opus/volltexte/2023/18839/">APPROX 2023</a>, <a href="https://arxiv.org/abs/2206.11807">arXiv</a>]
     <br>(with <a href="https://www.orie.cornell.edu/research/grad-students/ishan-bansal">Ishan Bansal</a>, <a href="https://www.math.uwaterloo.ca/~jcheriya/">Joseph Cheriyan</a>, and Logan Grout)</div>
     <br>
