--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 </div>
 <div>
 <a><strong>Postdoctoral Researcher</strong></a><br>
-<a>Research Institute for Discrete Mathematics</a><br>
-<a>University of Bonn, Germany</a><br>
-<a><b>Office:</b> Arithmeum, Room 310</a><br>
-<a><b>email:</b> &ltfirstname&gt&ltdot&gt&ltlastname&gt@uwaterloo.ca</a><br>
-<a><b>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</b> &ltlastname&gt@dm.uni-bonn.de</a><br>
+<a>Department of Computer Science</a><br>
+<a>ETH Zürich, Switzerland</a><br>
+<a><b>Office:</b> OAT Z 22.1, Andreasstrasse 5, 8092 Zürich</a><br>
+<a><b>email:</b> sharat.ibrahimpur (at) uwaterloo.ca </a><br>
+<a><b>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</b> sibrahimpur (at) ethz.ch </a><br>
 </div>
 </td>
 <td width="10%"> </td>
@@ -36,7 +36,7 @@
 <td width="10%"> </td>
 <td width="80%">
   
-  <div>I am currently a postdoc at the Research Institute for Discrete Mathematics in Bonn, hosted by <a href="https://www.or.uni-bonn.de/~traub/Vera_Traub.html">Vera Traub</a>. Before this, I was a postdoc in the <a href="https://www.lse.ac.uk/Mathematics/Research/Operations-Research">Mathematics Department</a> at the London School of Economics, hosted by <a href="https://personal.lse.ac.uk/veghl/">László Végh</a> and <a href="https://nolver.net/home/">Neil Olver</a>. I received my M.Math and PhD degrees in Combinatorics and Optimization from the University of Waterloo, where I was advised by <a href="http://www.math.uwaterloo.ca/~cswamy/">Chaitanya Swamy</a>. My undergraduate degree was in Applied Mathematics at the Indian Institute of Technology Roorkee.</div>
+  <div>I am a postdoc with <a href="https://people.inf.ethz.ch/vtraub/">Vera Traub</a> at ETH Zurich. Before this, I was a postdoc at the <a href="https://www.or.uni-bonn.de/index.eng.html">Research Institute for Discrete Mathematics</a> in Bonn with Vera and <a href="https://www.or.uni-bonn.de/cards/home/vygen/index.html">Jens Vygen</a> and at the <a href="https://www.lse.ac.uk/Mathematics/Research/Operations-Research">London School of Economics</a> with <a href="https://nolver.net/home/">Neil Olver</a> and <a https://www.laszlovegh.eu/">László Végh</a>. I received my M.Math and PhD degrees from the University of Waterloo, where I was advised by <a href="http://www.math.uwaterloo.ca/~cswamy/">Chaitanya Swamy</a>. My undergraduate degree was in Applied Mathematics at the Indian Institute of Technology Roorkee.</div>
 
   <div><br>I am mainly interested in designing approximation algorithms for combinatorial optimization problems, with a recent focus on stochastic optimization. I have broadly worked on problems arising in Network Design, Scheduling / Load Balancing, and Caching.</div>
 
@@ -61,10 +61,14 @@
 <table style="width:100%"><tbody><tr>
   <td width="12%"> </td>
   <td width="78%">
-    <div><b>An O(log n)-Approximation Algorithm for (p,q)-Flexible Graph Connectivity via Independent Rounding</b> [IPCO 2025, <a href="https://arxiv.org/abs/2501.12549">arXiv</a>]
+    <div><b>An O(log n)-Approximation Algorithm for (p,q)-Flexible Graph Connectivity via Independent Rounding</b> [<a href="https://doi.org/10.1007/978-3-031-93112-3_23">IPCO 2025</a>, <a href="https://arxiv.org/abs/2501.12549">arXiv</a>]
     <br>(with <a href="https://www.laszlovegh.eu/">László Végh</a>)</div>
     <br>
-    
+
+    <div><b>Improved Approximation Algorithms by Generalizing the Primal-Dual Method Beyond Uncrossable Functions</b> [<a href="https://doi.org/10.1007/s00453-024-01235-2">Algorithmica</a>, <a href="https://doi.org/10.4230/LIPIcs.ICALP.2023.15">ICALP 2023</a>, <a href="https://arxiv.org/abs/2209.11209">arXiv</a>]
+    <br>(with Ishan Bansal, Joseph Cheriyan, and Logan Grout)</div>
+    <br>
+
     <div><b>Algorithms for 2-Connected Network Design and Flexible Steiner Trees with a Constant Number of Terminals</b> [<a href="https://drops.dagstuhl.de/opus/volltexte/2023/18839/">APPROX 2023</a>, <a href="https://arxiv.org/abs/2206.11807">arXiv</a>]
     <br>(with <a href="https://www.orie.cornell.edu/research/grad-students/ishan-bansal">Ishan Bansal</a>, <a href="https://www.math.uwaterloo.ca/~jcheriya/">Joseph Cheriyan</a>, and Logan Grout)</div>
     <br>
@@ -72,13 +76,7 @@
     <div><b>Efficient Caching with Reserves via Marking</b> [<a href="https://doi.org/10.4230/LIPIcs.ICALP.2023.80">ICALP 2023</a>, <a href="https://arxiv.org/abs/2305.02508">arXiv</a>]
     <br>(with <a href="https://sites.google.com/view/manishpurohit">Manish Purohit</a>, Zoya Svitkina, Erik Vee, and <a href="https://sites.google.com/site/joshw0/">Joshua R. Wang</a>)</div>
     <br>
-
-   <div><b>Improved Approximation Algorithms by Generalizing the Primal-Dual Method Beyond Uncrossable Functions</b> [<a href="https://doi.org/10.4230/LIPIcs.ICALP.2023.15">ICALP 2023</a>, <a href="https://arxiv.org/abs/2209.11209">arXiv</a>]
-    <br>(with Ishan Bansal, Joseph Cheriyan, and Logan Grout)</div>
-    <br>
  
-
-
     <div><b>Approximation Algorithms for Flexible Graph Connectivity</b> [<a href="https://doi.org/10.1007/s10107-023-01961-5">MathProg 2023</a>, <a href="https://drops.dagstuhl.de/opus/volltexte/2021/15520/">FSTTCS 2021</a>, <a href="https://arxiv.org/abs/2102.03304">arXiv</a>]
     <br>(with <a href="https://www.site.uottawa.ca/~sylvia/">Sylvia Boyd</a>, Joseph Cheriyan, and Arash Haddadan)</div>
     <br>
@@ -95,7 +93,6 @@
     <br>(with Chaitanya Swamy)</div>
     <br>
 
-
     <div><b>Minimum-Norm Load Balancing is (almost) as Easy as Minimizing Makespan</b> [<a href="https://drops.dagstuhl.de/opus/volltexte/2021/14150/">ICALP 2021</a>]
     <br>(with Chaitanya Swamy)</div>
     <br>
@@ -103,8 +100,7 @@
     <div><b>Approximation Algorithms for Stochastic Minimum Norm Combinatorial Optimization</b> [<a href="https://ieeexplore.ieee.org/document/9317890">FOCS 2020</a>, <a href="https://arxiv.org/abs/2010.05127">arXiv</a>]
     <br>(with Chaitanya Swamy)</div>
     <br>
-
-
+      
     <div><b>Min-Max Theorems for Packing and Covering Odd (u,v)-trails</b> [<a href="https://doi.org/10.1007/978-3-319-59250-3_23">IPCO 2017</a>, <a href="https://arxiv.org/abs/1708.06857">arXiv</a>]
     <br>(with Chaitanya Swamy)</div>
   </td>
